--- a/public/index.html
+++ b/public/index.html
@@ -386,6 +386,7 @@
     </footer>
   </body>
 
+  <script src="https://unpkg.com/quicklink@1.0.0/dist/quicklink.umd.js"></script>
   <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -400,6 +401,8 @@
   <script defer src="js/materialize.min.js"></script>
   <script>
     $(document).ready(function() {
+      quicklink()
+
       $('.sidenav').sidenav()
 
       $('.slider').slider({
